Fix alignment with login dialogue

--- a/client/scss/_session.scss
+++ b/client/scss/_session.scss
@@ -53,7 +53,7 @@ header {
 }
 
 #login-dropdown-list {
-  left: -170px;
+  left: -200px;
 
   border-radius: 0;
 
